--- a/style.css
+++ b/style.css
@@ -3,15 +3,11 @@
     padding: 0;
     box-sizing: border-box;
     line-height: 1.6;
-    outline: 1px solid red;
+    outline: 1px solid red; 
 }
 
 body {
     background-color: lightblue;
-}
-form,
-body {
-    display: block;
 }
 
 h2 {
@@ -22,6 +18,10 @@ h2 {
     margin-inline-end: 0px;
 }
 
+img {
+    height: 10vh;
+}
+
 #page {
     width: 100vw;
     height: 100vh;
@@ -29,33 +29,51 @@ h2 {
     flex-flow: row wrap;
 }
 
-
 input {
     font-size: 1.5rem;
     border: 2px solid #E5E7EB;
+    max-width: 100%;
 }
 
 button {
-    margin: 40px 0;
+    margin-top: calc(40px + (44vh - 700px) * (15 - 30) / (700 - 1000));
     padding: 10px 40px;
     font-size: 1.5rem;
     border-radius: 5px;
+    margin-bottom: calc(35px + (44vh - 700px) * (15 - 30) / (700 - 1000));
 }
 
 footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: black;
     color: white;
-    text-align: center;
+    min-height: 4vh;
     margin-top: auto;
-    min-height: 3vh;
+    width: 100%;
 }
 
 #containerLeft {
-    background-image: url(photo2.jpg);
+    background-image: url(background.jpg);
     background-position: center;
-    background-size: auto;
+    background-size: cover;
     background-repeat: no-repeat;
     width: 40vw;
+}
+
+#header {
+    position: relative;
+    padding: 20px 0;
+    gap: 2vw;
+    top: 15vh;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.747);
+    color: white;
+    height: auto;
 }
 
 #containerRight {
@@ -67,15 +85,16 @@ footer {
 
 #top {
     background-color: lightblue;
-    padding: 5vh;
+    padding-top: calc(170px + (39vh - 700px) * (15 - 30) / (700 - 1000));
     text-align: left;
+    font-size: large;
     font-weight: 600;
     width: 70%;
 }
 
 #form {
     background-color: whitesmoke;
-    padding-top: 60px;
+    padding-top: -1px;
     padding-bottom: 60px;
     display: flex;
     flex-flow: row wrap;
@@ -115,31 +134,61 @@ input:focus {
     box-shadow: 8px 5px 15px 0px rgba(0, 0, 0, 0.25);
 }
 
-@media only screen and (max-width: 1050px) {
+@media only screen and (max-width: 600px) {
     #page {
-        flex-flow: column nowrap;
-        align-items: center;
-    }
-
-    #containerLeft {
         flex-flow: column;
         height: auto;
         text-align: center;
+        flex: 1;
+    }
+
+    body {
+        display: flex;
+        flex-direction: column;
+        min-height: 100vh;
+    }
+
+    #containerLeft {
+        display: flex;
+        height: 15vh; 
+        width: 100vw;
+        background-size: 100vw;
     }
 
     #containerRight {
         width: auto;
         height: auto;
+        flex: 4;
+    }
+
+    #header {
+        width: 100vw;
+        position: static;
+        gap: 10px;
+        flex-flow: column nowrap;
     }
 
     #top {
+        padding-top: calc(10px + (39vh - 700px) * (15 - 30) / (700 - 1000));
+        padding-bottom: calc(10px + (39vh - 700px) * (15 - 30) / (700 - 1000));
         width: auto;
-        margin-top: 30px;
     }
 
     #form {
         flex-flow: column nowrap;
         align-items: center;
+        padding-bottom: calc(29px + (39vh - 700px) * (15 - 30) / (700 - 1000));
+    }
+
+    #top,
+    #form,
+    #button {
+        flex: 1;
+    }
+
+    .formTitle {
+        padding-top: calc(10px + (39vh - 700px) * (15 - 30) / (700 - 1000));
+        padding-bottom: calc(10px + (39vh - 700px) * (15 - 30) / (700 - 1000));
     }
 
     .input {
@@ -152,20 +201,31 @@ input:focus {
     #button {
         display: flex;
         flex-flow: column nowrap;
+        justify-content: center;
         align-items: center;
+        align-self: flex-end;
     }
 
     button {
-        margin-bottom: 0px;
         width: 60vw;
         padding: 10px 5px;
+    }
+    h2 {
+        padding-left: 10px;
+        padding-right: 10px;
+        text-align: center;
     }
 
     input {
         width: 70vw;
     }
 
-    h2 {
-        text-align: center;
+    input,
+    button {
+        font-size: 0.8rem;
+    }
+
+    footer {
+        margin-top: 10px;
     }
 }
