--- a/style.css
+++ b/style.css
@@ -1,3 +1,20 @@
+@font-face {
+    font-family: 'helsinkiregular';
+    src: url('fonts/helsinki-webfont.woff2') format('woff2'),
+         url('fonts/helsinki-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+@font-face {
+    font-family: 'gloria_hallelujahregular';
+    src: url('fonts/gloriahallelujah-webfont.woff2') format('woff2'),
+         url('fonts/gloriahallelujah-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -12,10 +29,14 @@
     --color-text: #e8e4d9;
     --color-background: #c4a373;
     --color-form: #9a8068;
+    --header-font: 'gloria_hallelujahregular', sans-serif;
+    --label-font: 'helsinkiregular', sans-serif;
 }
 
 h2 {
     display: block;
+    font-size: 2rem;
+    font-family: var(--header-font);
     margin-block-start: 1em;
     margin-block-end: 1em;
     margin-inline-start: 0px;
@@ -33,18 +54,32 @@ img {
     flex-flow: row wrap;
 }
 
+label,
+p {
+    font-size: 1.5rem;
+}
+
 input {
     font-size: 1.5rem;
     border: 2px solid #E5E7EB;
     max-width: 100%;
 }
 
+label,
+input,
+p {
+    font-family: var(--label-font);
+}
+
 button {
     margin-top: calc(40px + (44vh - 700px) * (15 - 30) / (700 - 1000));
     padding: 10px 40px;
     font-size: 1.5rem;
+    font-family: var(--header-font);
     border-radius: 5px;
     margin-bottom: calc(35px + (44vh - 700px) * (15 - 30) / (700 - 1000));
+    background-color: var(--color-button);
+    color: var(--color-text);
 }
 
 footer {
@@ -55,6 +90,10 @@ footer {
     min-height: 4vh;
     margin-top: auto;
     width: 100%;
+}
+
+em {
+    text-decoration: underline;
 }
 
 footer img {
@@ -71,6 +110,8 @@ footer img {
 }
 
 #header {
+    font-family: var(--header-font);
+    font-size: 3rem;
     position: relative;
     padding: 20px 0;
     gap: 2vw;
