changed background filepath matches folder

--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ footer img {
 }
 
 #containerLeft {
-    background-image: url(background.jpg);
+    background-image: url(photos/background.jpg);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
