--- a/style.css
+++ b/style.css
@@ -26,9 +26,18 @@
 :root {
     --color-footer: #2d4a3e;
     --color-button: #5a7c65;
+    --color-button-hover: #6b8f74;
     --color-text: #e8e4d9;
+    --color-text-placeholder: #a8b3ab;
+    --color-text-input: #1f2f26;
+    --color-link: #3d7b8a;
+    --color-link-hover: #4a8a9b;
+    --color-link-visited-hover: #3a4d42;
+    --color-link-visited: #2a3d35;
+    --color-text-hover: #f5f2eb;
     --color-background: #c4a373;
     --color-form: #9a8068;
+    --color-input-hover: #f0f3f2;
     --header-font: 'gloria_hallelujahregular', sans-serif;
     --label-font: 'helsinkiregular', sans-serif;
 }
@@ -41,6 +50,11 @@ h2 {
     margin-block-end: 1em;
     margin-inline-start: 0px;
     margin-inline-end: 0px;
+}
+
+h1,
+h2 {
+    letter-spacing: 5px;
 }
 
 img {
@@ -59,10 +73,25 @@ p {
     font-size: 1.5rem;
 }
 
+label {
+    transition-duration: 0.4s;
+}
+
 input {
     font-size: 1.5rem;
-    border: 2px solid #E5E7EB;
+    border: 3px solid var(--color-text);
+    background-color: var(--color-text-hover);
     max-width: 100%;
+    color: var(--color-text-input);
+    transition-duration: 0.4s;
+}
+
+input::placeholder {
+    color: var(--color-text-placeholder);
+}
+
+input:hover {
+    border: 3px solid var(--color-text-input);
 }
 
 label,
@@ -80,6 +109,8 @@ button {
     margin-bottom: calc(35px + (44vh - 700px) * (15 - 30) / (700 - 1000));
     background-color: var(--color-button);
     color: var(--color-text);
+    box-shadow: 5px 8px 12px 0px rgb(45 74 62 / 80%);
+    transition-duration: 0.2s;
 }
 
 footer {
@@ -94,6 +125,7 @@ footer {
 
 em {
     text-decoration: underline;
+    transition-duration: 0.2s;
 }
 
 footer img {
@@ -134,7 +166,7 @@ footer img {
 }
 
 #top {
-    padding-top: calc(170px + (39vh - 700px) * (15 - 30) / (700 - 1000));
+    padding-top: calc(31px + (40vh - 700px) * (15 - 30) / (700 - 1000));
     text-align: left;
     font-size: large;
     font-weight: 600;
@@ -143,11 +175,14 @@ footer img {
 
 #form {
     background-color: var(--color-form);
-    padding-top: -1px;
     padding-bottom: 60px;
     display: flex;
     flex-flow: row wrap;
     gap: 20px;
+}
+
+#button {
+    box-shadow: inset 0 20px 11px 0px rgb(45 74 62 / 12%);
 }
 
 .formTitle {
@@ -173,17 +208,60 @@ body,
 }
 
 input:invalid:not(:placeholder-shown) {
-    border: 3px solid #e74c3c;
+    border: 3px solid #b85450;
+}
+
+.input:has(input:invalid:not(:placeholder-shown)) label {
+    color: #b85450;
 }
 
 input:valid {
-    border: 3px solid #7cb342;
+    border: 3px solid #6b8f47;
+}
+
+.input:has(input:valid) label {
+    color: #6b8f47;
 }
 
 input:focus {
     outline: none;
-    border: 3px solid #4a90e2;
-    box-shadow: 8px 5px 15px 0px rgba(0, 0, 0, 0.25);
+    border: 3px solid #4a6b5c;
+    box-shadow: 5px 8px 12px 0px rgb(65 94 82 / 80%);
+}
+
+.input:focus-within label {
+    color: #4a6b5c;
+}
+
+em:hover {
+    color: var(--color-text-hover);
+}
+
+button:hover {
+    background-color: var(--color-button-hover);
+    color: var(--color-text-hover);
+}
+
+a {
+    color: var(--color-link);
+    transition-duration: 0.2s;
+}
+
+a:hover {
+    color: var(--color-link-hover);
+}
+
+a:visited:hover {
+    color: var(--color-link-visited-hover);
+}
+
+a:visited {
+    color: var(--color-link-visited);
+}
+
+a,
+a:visited {
+    text-decoration: none;
 }
 
 @media only screen and (max-width: 600px) {
